--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   markdownlint-check:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -25,7 +25,7 @@ jobs:
           files: .
 
   markdown-link-check:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
