--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -23,6 +23,7 @@ jobs:
         uses: nosborn/github-action-markdown-cli@v1.1.1
         with:
           files: .
+          ignore_files: CHANGELOG.md
 
   markdown-link-check:
     runs-on: ubuntu-latest
